[gd_scene load_steps=3 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]
ProgressBar/colors/font_color = Color( 0.65098, 0.662745, 0.839216, 1 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="label_elapsed_time" type="Label" parent="."]
margin_left = 6.67419
margin_top = 12.681
margin_right = 89.6742
margin_bottom = 26.681
text = "Elapsed time: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progress_bar" type="ProgressBar" parent="."]
margin_left = 108.746
margin_top = 12.681
margin_right = 222.746
margin_bottom = 26.681
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_elapsed_time_sec" type="Label" parent="."]
margin_left = 6.67419
margin_top = 33.4274
margin_right = 46.6742
margin_bottom = 47.4274
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_duration" type="Label" parent="."]
margin_left = 6.67419
margin_top = 47.4274
margin_right = 46.6742
margin_bottom = 61.4274
text = "Duration: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider" type="HSlider" parent="."]
margin_left = 70.0
margin_top = 47.0
margin_right = 223.0
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_reset" type="Button" parent="."]
margin_left = 6.67419
margin_top = 70.5
margin_right = 222.674
margin_bottom = 90.5
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="onesec" from="." to="." method="_on_main_onesec"]
[connection signal="value_changed" from="slider" to="." method="_on_slider_value_changed"]
[connection signal="pressed" from="btn_reset" to="." method="_on_btn_reset_pressed"]
